chore - Update the docs
